init(fubuki): initial commit for Fubuki
- Reformat code.
- Fix incorrect initialize order in MemoryKey initializers.
- Migrate to Gradle.